added titles to each html page I added the title to each page and also moved the name of the links within the a tag(anchor) bug was: name was between </a> and </li> tag.

--- a/recipes/chikenSausagePasta.html
+++ b/recipes/chikenSausagePasta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pasta Recipe</title>
 </head>
 <body>
     <h1>Chicken Sausage Pasta(with mushrooms)</h1>
@@ -21,11 +21,11 @@
     </ul>
     <h4>Steps</h4>
     <ol>
-        <li>Step1</li>
-        <li>Step2</li>
-        <li>Step3</li>
-        <li>Step4</li>
-        <li>Step5</li>
+        <li>Step1 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi incidunt voluptas earum sunt quo inventore unde labore atque illo consequatur!</li>
+        <li>Step2 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt tenetur temporibus dolorem quas impedit quaerat, est aspernatur consequatur reiciendis voluptatum. Quas omnis nihil repellendus adipisci?</li>
+        <li>Step3 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, molestias nobis rerum porro tenetur fugiat, possimus dolor saepe, laborum quasi aut voluptate. Autem, ea. Repudiandae rem fuga ratione nobis exercitationem! Quos aliquam quis blanditiis nostrum ea voluptatum possimus similique culpa.</li>
+        <li>Step4 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia sunt eum quae fuga assumenda optio quis sapiente deleniti rem expedita, amet corrupti provident dignissimos. Recusandae, quos voluptates. Cum nulla dolores quisquam modi tenetur, iure odit.</li>
+        <li>Step5 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus porro voluptates reprehenderit labore esse fugit amet veritatis excepturi, obcaecati sequi nobis quas perspiciatis!</li>
     </ol>
 </body>
 </html>
