--- a/recipes/nachos.html
+++ b/recipes/nachos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nacho Recipe</title>
 </head>
 <body>
     <h1>Nachos</h1>
@@ -21,11 +21,11 @@
     </ul>
     <h4>Steps</h4>
     <ol>
-        <li>Step1</li>
-        <li>Step2</li>
-        <li>Step3</li>
-        <li>Step4</li>
-        <li>Step5</li>
+        <li>Step1 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem iste tenetur est, quibusdam dignissimos architecto totam possimus eligendi. Eius, ipsam.</li>
+        <li>Step2 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque esse possimus, numquam aliquid necessitatibus eos nam, officia consectetur ex eveniet illo libero commodi pariatur nihil rerum aliquam perspiciatis placeat molestias.</li>
+        <li>Step3 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit ratione voluptas ea, nihil vitae nisi!</li>
+        <li>Step4 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ad blanditiis sunt, possimus consequatur, inventore, libero qui facilis aliquid fugiat illum numquam natus!</li>
+        <li>Step5 Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, asperiores. Quos, vel maxime. Sunt ex voluptates ab expedita! Non porro eveniet impedit explicabo voluptatem sunt! Eius quibusdam libero eveniet numquam repellendus, esse ut officia velit praesentium, ipsa adipisci voluptatum deserunt.</li>
     </ol>
 </body>
 </html>
