--- a/recipes/scrambledEggs.html
+++ b/recipes/scrambledEggs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Scrambled Eggs Recipe</title>
 </head>
 <body>
     <h1>Scrambled Eggs</h1>
@@ -21,11 +21,11 @@
     </ul>
     <h4>Steps</h4>
     <ol>
-        <li>Step1</li>
-        <li>Step2</li>
-        <li>Step3</li>
-        <li>Step4</li>
-        <li>Step5</li>
+        <li>Step1 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius, odit.</li>
+        <li>Step2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni earum aperiam beatae non ipsa. Tempore!</li>
+        <li>Step3 Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, nihil distinctio. Labore neque dicta minus accusantium, non impedit recusandae voluptatibus!</li>
+        <li>Step4 Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, totam deserunt? Ratione, soluta laudantium! Odit voluptatum necessitatibus rerum repellendus tenetur alias impedit culpa incidunt molestias.</li>
+        <li>Step5 Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit sequi veniam pariatur cum, inventore beatae at nostrum illo, rem illum sit aliquam distinctio nulla tenetur cumque quibusdam magni voluptas excepturi?</li>
     </ol>
 </body>
 </html>
