--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipe Site</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="/recipes/chikenSausagePasta.html"></a>Chicken Sausage Pasta(with mushrooms)</li>
-        <li><a href="/recipes/scrambledEggs.html"></a>Scrambled Eggs</li>
-        <li><a href="/recipes/nachos.html"></a>Nachos</li>
+        <li><a href="/recipes/chikenSausagePasta.html">Chicken Sausage Pasta(with mushrooms)</a></li>
+        <li><a href="/recipes/scrambledEggs.html">Scrambled Eggs</a></li>
+        <li><a href="/recipes/nachos.html">Nachos</a></li>
     </ul>
 </body>
 </html>
